Update to version 7.6